# acont

./: CONFIGURARE_EMAIL.md  PEPPOL_INTEGRATION.md  PRODUCTION_CHECKLIST.md  REPORTS_IMPLEMENTATION.md  SETTINGS_PAGE_FIXES.md  STRIPE_EMAIL_INTEGRATION_SUMMARY.md  STRIPE_SETUP.md
backend/: .gitignore  HELP.md  main.py  pyproject.toml  req191225.txt  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: 10de051f9eac_add_legal_acceptances.py  3a6744c22bb0_add_merchant_logo_url.py  413a6c322a75_create_clients_table.py  48793fb4d4f6_add_products_table.py  4f073b4fdf14_add_preferences_tables.py  55cd65346ac7_add_calendar_events_table.py  586d5f6b1601_add_credit_notes.py  5a0674d39f26_init_tables.py  63d4430f5b7d_recreate_clients_and_products_tables.py  7d64a2fa3111_invoice_client_comm_template.py  8bd125f848fd_add_invoices.py  993cd5b3df93_add_merchant_logo_url.py  9c558179f89e_add_merchant_logo_url.py  abd4a3961ef7_add_client_and_supplier_invoice_emails.py  ac8f928d8c91_add_legal_documents.py  bfb17306a90d_add_clients_table.py  d4e8f3a1b2c5_add_phone_and_communication_email_to_merchant.py  e5f7g8h9i0j1_add_peppol_transmission_tracking.py  f6g8h9i0j1k2_add_template_style_to_invoice_templates.py  g7h8i9j0k1l2_add_suppliers_tables.py  h8i9j0k1l2m3_add_subscriptions_table.py
backend/app/api/: router.py
backend/app/core/: config.py  countries.py  credit_note_pdf.py  email.py  invoice.py  invoice_pdf.py  legal.py  security.py  usage_tracking.py
backend/app/db/: session.py
backend/app/models/: __init__.py  audit.py  (+17 more)
backend/scripts/: seed_platform_admin.py
(+118 files in other folders)
