[project]
name = "acont-backend"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
  "fastapi==0.124.4",
  "uvicorn[standard]==0.38.0",
  "SQLAlchemy==2.0.45",
  "psycopg[binary]==3.3.2",
  "psycopg2-binary==2.9.11",
  "alembic==1.17.2",
  "python-jose[cryptography]==3.5.0",
  "PyJWT==2.10.1",
  "passlib[bcrypt]==1.7.4",
  "python-multipart==0.0.20",
  "pydantic-settings==2.12.0",
  "pydantic==2.12.5",
  "email-validator==2.3.0",
  "python-dotenv==1.2.1",
  "stripe==14.1.0",
  "reportlab==4.4.6",
  "cryptography==46.0.3",
  "requests==2.32.5",
  "Pillow==12.0.0",
]
